--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -418,10 +418,11 @@
         <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
           <span aria-hidden="true">×</span>
         </button>
-        <h6 class="modal-title w-100" id="myModalLabel">On Going Events</h6>
+        <h6 class="modal-title w-100" id="myModalLabel">Your On Going Events</h6>
       </div>
       <div *ngIf="onGoingEvents" class="modal-body">
-        <h5>{{onGoingEvents[0]?.guideId?.city}}, {{onGoingEvents[0]?.guideId?.state}}</h5>
+        <h5 *ngIf="userService.getRole() === 'tourist'">{{onGoingEvents[0]?.guideId?.city}}, {{onGoingEvents[0]?.guideId?.state}}</h5>
+        <h5 *ngIf="userService.getRole() === 'guide'">{{user.city}}, {{user.state}}</h5>
         <!-- <p>With {{onGoingEvents[0]?.guideId?.gender}} {{onGoingEvents[0]?.guideId?.name | titlecase}}</p> -->
         <div class="row">
           <div class="col">
@@ -564,7 +565,7 @@
   </div>
   <div class="modal-footer row mx-0 ">
        <div class="col">
-         <button type="button" mdbBtn size="sm" class="waves-light btn-block dblue" (click)="d('Cross click')" mdbWavesEffect>Close</button>
+         <button type="button" mdbBtn size="sm" class="waves-light btn-block bgrey" (click)="d('Cross click')" mdbWavesEffect>Close</button>
       </div>
       <div class="col">
         <button type="button" mdbBtn size="sm" class="btn-block waves-light dpurple"
