--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -88,3 +88,8 @@ a:hover {
     background-color: #757575;
     color: white;
 }
+
+table.table th, table.table td {
+    padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+  }
