--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.scss
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.scss
@@ -75,7 +75,11 @@
         font-size: 25px;
     }
 }
-
 .cardHeight {
     min-height: 87vh;
+}
+@media(max-width: 800px){
+    .cardHeight {
+        background: white !important;
+    }
 }
