--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -54,8 +54,9 @@
     </div>
 
 
+   
     <div class="d-block d-md-none mt-4">
-        <mdb-card class="bag mb-4" *ngFor="let data of bookingsList">
+        <mdb-card class="bag mb-4" *ngFor="let data of bookingsList"  style=" background: linear-gradient(180deg, rgba(255, 255, 255, 0.9671218829328606) 25%, rgba(221, 213, 226, 1) 75%, rgba(202, 194, 207, 1) 99%);">
             <mdb-card-body>
                 <mdb-card-title>
                     <h4>{{data.tourType | titlecase}} Tour</h4>
