--- a/src/app/modules/tourists/components/requests/requests.component.html
+++ b/src/app/modules/tourists/components/requests/requests.component.html
@@ -52,7 +52,7 @@
 
 
     <div class="d-block d-md-none mt-4">
-        <mdb-card class="bag mb-4" *ngFor="let data of requestList">
+        <mdb-card class="bag mb-4" *ngFor="let data of requestList"  style=" background: linear-gradient(180deg, rgba(255, 255, 255, 0.9671218829328606) 25%, rgba(221, 213, 226, 1) 75%, rgba(202, 194, 207, 1) 99%);">
             <mdb-card-body>
                 <mdb-card-title>
                     <h4>{{data.tourType | titlecase}} Tour</h4>
