terms and condition

--- a/src/app/modules/guide/components/terms-conditions/terms-conditions.component.html
+++ b/src/app/modules/guide/components/terms-conditions/terms-conditions.component.html
@@ -4,9 +4,13 @@
         <div class="col-12">
             <div class="card-text">
                 <div>
-                    <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
+                    <h5>
+                        Voila is an online platform for travelers seeking to engage with locals all over the world to offer them the most outstanding eat experiences, tours and activities. We are a marketplace where demand (travelers) meets supply (local hosts).
+
+Through our website, travelers can book experiences, tours and activities with local hosts all over the world.
+
+By making a reservation through our platform, guests enter into a direct contractual relationship with the host with whom they make a reservation. From the point when the booking is made, Voila acts solely as an intermediary between the guest and the host. Voila is not a party to any agreement between the guest and the host and is not liable for any (attributable) failure to perform or other damages arising out of this relationship
+                    </h5>
                 </div><br>
                 <form [formGroup]="termsConditions">
                     <div class="row">
