--- a/src/app/modules/guide/components/profile/profile.component.html
+++ b/src/app/modules/guide/components/profile/profile.component.html
@@ -319,8 +319,10 @@
                     </div>
                 </div>
                 <div class="float-right">
-                    <button type="button" mdbBtn style="background: #757575; color:white;" class="waves-light" aria-label="Close" (click)="editpersonal.hide()" mdbWavesEffect>Close</button>
-                    <button type="submit"  style="background: #22c1c3;" mdbBtn class="save-btn relative waves-light" mdbWavesEffect>Save!</button>
+                    <button type="button" mdbBtn style="background: #757575; color:white;" class="waves-light btn-sm" 
+                    aria-label="Close" (click)="editpersonal.hide()" mdbWavesEffect>Close</button>
+                    <button type="submit"  style="background: #22c1c3;" mdbBtn class="save-btn btn-sm relative waves-light"
+                     mdbWavesEffect>Save!</button>
                 </div>
             </form>
         </div>
@@ -363,8 +365,10 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" mdbBtn style="background: #757575; color:white;" class="waves-light" aria-label="Close" (click)="editbusiness.hide()" mdbWavesEffect>Close</button>
-                    <button type="submit" (click)="submitBusinessDetails()"  style="background: #553d67;" mdbBtn class="save-btn relative waves-light" mdbWavesEffect>Save!</button>
+                    <button type="button" mdbBtn style="background: #757575; color:white;"
+                     class="waves-light btn-sm" aria-label="Close" (click)="editbusiness.hide()" mdbWavesEffect>Close</button>
+                    <button type="submit" (click)="submitBusinessDetails()"  
+                    style="background: #553d67;" mdbBtn class="save-btn btn-sm relative waves-light" mdbWavesEffect>Save!</button>
                 </div>
             </form>
         </div>
@@ -413,9 +417,15 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" mdbBtn style="background: #757575; color:white;" class="waves-light" aria-label="Close" (click)="editexperience.hide()" mdbWavesEffect>Close</button>
-                    <button type="submit" mdbBtn *ngIf="!editExp" (click)="addExperience()"  style="background: #f06191;" class="save-btn relative waves-light" mdbWavesEffect>Save!</button>
-                    <button type="submit" mdbBtn (click)="updateExperience()" *ngIf="editExp"  style="background: #f06191;" class="save-btn white-text relative waves-light" mdbWavesEffect>Update!</button>
+                    <button type="button" mdbBtn style="background: #757575; color:white;" 
+                    class="waves-light btn-sm" aria-label="Close" (click)="editexperience.hide()"
+                     mdbWavesEffect>Close</button>
+                    <button type="submit" mdbBtn *ngIf="!editExp" (click)="addExperience()" 
+                     style="background: #f06191;" class="save-btn btn-sm relative waves-light" 
+                     mdbWavesEffect>Save!</button>
+                    <button type="submit" mdbBtn (click)="updateExperience()" *ngIf="editExp"  
+                    style="background: #f06191;" class="save-btn white-text btn-sm relative waves-light"
+                     mdbWavesEffect>Update!</button>
                 </div>
             </form>
         </div>
@@ -443,8 +453,11 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" mdbBtn style="background: #757575; color:white;" class="waves-light" aria-label="Close" (click)="addlanguage.hide()" mdbWavesEffect>Close</button>
-                    <button type="submit" style="background-color: rgba(76, 175, 80, 0.7); color: white;" mdbBtn class="save-btn relative waves-light" mdbWavesEffect>Save!</button>
+                    <button type="button" mdbBtn style="background: #757575; color:white;" 
+                    class="waves-light btn-sm" aria-label="Close" (click)="addlanguage.hide()" 
+                    mdbWavesEffect>Close</button>
+                    <button type="submit" style="background-color: rgba(76, 175, 80, 0.7); color: white;" 
+                    mdbBtn class="save-btn btn-sm relative waves-light" mdbWavesEffect>Save!</button>
                 </div>
             </form>
         </div>
@@ -472,8 +485,12 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" mdbBtn style="background: #757575; color:white;" class="waves-light" aria-label="Close" (click)="addintrest.hide()" mdbWavesEffect>Close</button>
-                    <button type="submit" mdbBtn  style="background-color: rgba(255, 152, 0, 0.7); color: white;" class="save-btn relative waves-light" mdbWavesEffect>Save!</button>
+                    <button type="button" mdbBtn size="sm"
+                    style="background: #757575; color:white;" class="waves-light btn-sm"
+                     aria-label="Close" (click)="addintrest.hide()" mdbWavesEffect>Close</button>
+                    <button type="submit" mdbBtn size="sm"
+                     style="background-color: rgba(255, 152, 0, 0.7); color: white;"
+                      class="save-btn relative waves-light btn-sm" mdbWavesEffect>Save!</button>
                 </div>
             </form>
         </div>
