--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                         <div *ngIf="!getDealsList(guide)" class="row p-2 text-center">
-                            <img class="image-fluid w-17 h-75 float-center m-auto " src="https://drive.google.com/file/d/1Wn0LLyy08Yu8WKvu2ScbUk1LeofvJ9qz/view?usp=sharing" alt="">
+                            <img class="image-fluid w-17 h-75 float-center m-auto " src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/lime-396.png" alt="">
                             <h2>No Deals Avialable</h2>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
 
 <div *ngIf="!searchService.guidesList"  class="row">
     <div class="col text-center">
-        <img class="image-fluid w-25 h-75 m-auto " src="../../../../../assets/images/flamenco-page-not-found-1.png" alt="">
+        <img class="image-fluid w-25 h-75 m-auto " src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/flamenco-page-not-found-1.png" alt="">
         <h1>No Guides Available here!</h1>
     </div>
 </div>
