--- a/src/app/modules/tourists/pages/register/register.component.scss
+++ b/src/app/modules/tourists/pages/register/register.component.scss
@@ -23,7 +23,7 @@ html {
 }
 
 .bg {
-    background-image: url("https://images.unsplash.com/photo-1573398643956-2b9e6ade3456?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80");
+    background-image: url("https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/photo-1573398643956-2b9e6ade3456.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
