--- a/src/app/modules/admin/pages/guide-profile/guide-profile.component.html
+++ b/src/app/modules/admin/pages/guide-profile/guide-profile.component.html
@@ -1,7 +1,7 @@
 <div class=" bg ml-0 pl-0  pb-4 mt-5 mx-3 mb-0">
     <div class="row">
         <div class="col-12 col-md-6 mainh text-center mb-2">
-            <img [src]="userData?.picUrl ? userData?.picUrl : '../../../../../assets/images/grayman.png'" alt=""
+            <img [src]="userData?.picUrl ? userData?.picUrl : 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/grayman.png'" alt=""
              height="300px" width="100%">
         </div>
         <div class="col-12 col-md-6 pl-4">
