--- a/src/app/modules/home/top-cities/top-cities.component.scss
+++ b/src/app/modules/home/top-cities/top-cities.component.scss
@@ -18,7 +18,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    background-image: url(https://images.unsplash.com/photo-1576948676159-ad6604dc1fd0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80);
+    background-image: url(https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/photo-1576948676159-ad6604dc1fd0.jpeg);
     min-height: 140px;
 }
 
