--- a/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
@@ -174,8 +174,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" mdbBtn class="waves-light bgrey white-text" aria-label="Close" (click)="editpersonal.hide()" mdbWavesEffect>Close</button>
-                    <button type="submit" mdbBtn class="relative waves-light aquab white-text" mdbWavesEffect>Save!</button>
+                    <button type="button" mdbBtn class="waves-light bgrey btn-sm white-text" aria-label="Close" (click)="editpersonal.hide()" mdbWavesEffect>Close</button>
+                    <button type="submit" mdbBtn class="relative waves-light btn-sm aquab white-text" mdbWavesEffect>Save!</button>
                 </div>
             </form>
         </div>
@@ -203,8 +203,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" mdbBtn class="waves-light bgrey white-text" aria-label="Close" (click)="addintrest.hide()" mdbWavesEffect>Close</button>
-                    <button type="submit" mdbBtn style="background-color: rgba(255, 152, 0, 0.7);" class="relative waves-light" mdbWavesEffect>Save!</button>
+                    <button type="button" mdbBtn class=" btn-sm waves-light bgrey white-text" aria-label="Close" (click)="addintrest.hide()" mdbWavesEffect>Close</button>
+                    <button type="submit" mdbBtn style="background-color: rgba(255, 152, 0, 0.7);" class="btn-sm relative waves-light" mdbWavesEffect>Save!</button>
                 </div>
             </form>
         </div>
@@ -232,8 +232,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" mdbBtn class="waves-light bgrey white-text" aria-label="Close" (click)="addlanguage.hide()" mdbWavesEffect>Close</button>
-                    <button type="submit" style="background-color: rgba(76, 175, 80, 0.7);" mdbBtn class="relative waves-light white-text" mdbWavesEffect>Save!</button>
+                    <button type="button" mdbBtn class="btn-sm waves-light bgrey white-text" aria-label="Close" (click)="addlanguage.hide()" mdbWavesEffect>Close</button>
+                    <button type="submit" style="background-color: rgba(76, 175, 80, 0.7);" mdbBtn class="btn-sm relative waves-light white-text" mdbWavesEffect>Save!</button>
                 </div>
             </form>
         </div>
