--- a/src/app/shared/components/deals-cards/deals-cards.component.html
+++ b/src/app/shared/components/deals-cards/deals-cards.component.html
@@ -5,7 +5,7 @@
                 <i *ngIf="!isFavourite(deal) && role !== 'guide'" (click)="addToFavourite(deal)" class="far fa-heart fa-lg pink-text"></i>
                 <i *ngIf="isFavourite(deal) && role !== 'guide'" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text"></i>
                 <img class="main-img" height="240px" width="100%"
-                [src]="deal.state === 'Delhi' || deal.state === 'Andhra Pradesh' || deal.state === 'telangana' || deal.state === 'Uttarakhand' ?
+                [src]="deal.state === 'Delhi' || deal.state === 'Andhra Pradesh' || deal.state === 'Telangana' || deal.state === 'Uttarakhand' ?
                 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/' + deal.state + '/' + deal.city + '.jpg' : 
                 'https://voilabucket2020.s3.ap-south-1.amazonaws.com/States/' + deal.state + '.jpg'" 
                 alt="">
@@ -41,7 +41,7 @@
 
 <div *ngIf="!dealsList" class="row">
     <div class="col text-center">
-        <img class="image-fluid h-25 m-auto " src="../../../../assets/images/lime-396.png" alt="">
+        <img class="image-fluid h-25 m-auto " src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/lime-396.png" alt="">
         <h1>No Deals available here!</h1>
     </div>
 </div>
