--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Neuton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Neuton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Staatliches&display=swap');
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 body {
     height: 100%;
@@ -314,6 +315,7 @@ button[disabled],
     background-color: #757575;
     color: white;
 }
+
 .dblue {
     background-color: #22c1c3;
     color: white;
