--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -141,8 +141,8 @@
                             </div>
                         </div>
                         <div *ngIf="!getDealsList(guide)" class="row p-2 text-center">
-                            <img class="image-fluid w-17 h-75 float-center m-auto " src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/lime-396.png" alt="">
-                            <h2>No Deals Avialable</h2>
+                            <!-- <img class="image-fluid w-17 h-75 float-center m-auto " src="https://voilabucket2020.s3.ap-south-1.amazonaws.com/Assets/lime-396.png" alt=""> -->
+                            <h2>No Deals Avialable of this guide!</h2>
                         </div>
                     </div>
                 </div>
